fix(YSP-568): adjust media library pager styles and dark mode
Refined the pager styles in the media library widget modal to resolve
conflicts with Claro's pager styles. Updated link colors and background
handling for both light and dark modes, ensuring better visual
consistency and accessibility. Added specific hover states and improved
dark mode support for pager links.

--- a/css/admin-theme.css
+++ b/css/admin-theme.css
@@ -367,8 +367,21 @@ label.form-required::after, label.js-form-required::after {
   background: var(--color-basic-white);
 }
 
-.media-library-widget-modal .pager__link {
-  color: var(--color-basic-white);
+.media-library-widget-modal .ui-widget-content a {
+  color: var(--color-basic-black);
+}
+
+.media-library-widget-modal .pager__items {
+  font-weight: normal;
+}
+
+.media-library-widget-modal .pager__link.is-active {
+  background: transparent;
+}
+.media-library-widget-modal .pager__link--next:hover,
+.media-library-widget-modal .pager__link--previous:hover {
+  background: transparent;
+  color: var(--color-link-base);
 }
 
 .layout-builder .pager__items {
@@ -380,14 +393,29 @@ label.form-required::after, label.js-form-required::after {
   background: var(--color-basic-white);
 }
 
-.gin--dark-mode .media-library-widget-modal .pager__link {
-  color: var(--gin-color-primary);
-  background-color: transparent;
-}
-
+/* Claro's pager styles are interfering with ours. */
 .pager__item--last .pager__link::after,
 .pager__item--first .pager__link::before,
 .pager__item--next .pager__link::after,
 .pager__item--previous .pager__link::before {
   --background-image: none;
+  display: none;
+}
+
+/*
+ * Dark mode pager style
+ */
+.gin--dark-mode .media-library-widget-modal .pager__link--next:hover,
+.gin--dark-mode .media-library-widget-modal .pager__link--previous:hover {
+  background: transparent;
+  color: var(--color-basic-white);
+}
+
+.gin--dark-mode .media-library-widget-modal .pager__link {
+  color: var(--gin-color-primary);
+  background-color: transparent;
+}
+
+.gin--dark-mode .media-library-widget-modal .pager__link {
+  color: var(--color-basic-white);
 }
